[Teki] Provided jpackage